# nemreg

./: Overview.md  README.md  Usage.md  nemreg_demo.ipynb  nemreg_template.ipynb  pyproject.toml  pytest.ini  requirments.txt  test_physics_1.py  to_do.md
Test/nemreg/tests/: conftest.py  test_dataset.py  test_expr.py  test_fit_linear.py  test_fit_multivariable.py  test_imports.py  test_plotting.py
out_full_test/: report_1.aux  report_1.tex  report_demo.aux  report_demo.tex
src/nemreg/: __init__.py  api.py  imports.py
src/nemreg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nemreg/core/: __init__.py  dataset.py  expr.py  fit.py  model.py  operations.py  result.py  session.py
src/nemreg/export/: __init__.py  latex.py  latex1.py
src/nemreg/fitters/: levenberg_marquardt.py  nem_apt.py
src/nemreg/models/: __init__.py  arccos.py  arcsin.py  arctan.py  base.py  cosine.py  custom.py  damped_oscillation.py  exponential.py  gaussian.py  linear.py  logarithmic.py  logistic.py  lorentzian.py  multivariable_linear.py  multivariable_polynomial.py  polynomial.py  power.py  rational.py  sinusoidal.py  surface.py  tangent.py
src/nemreg/plotting/: dispatcher.py  multivariable_plot.py  plot_data.py  plot_result.py  plot_result_data.py
src/nemreg/stats/: metrics.py
