[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nemreg"
version = "0.1.0"
description = "Easy Reggression"
dependencies = ["numpy", "scipy", "matplotlib", "uncertainties"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "jupyter>=1.0"
]